[gd_scene load_steps=3 format=3 uid="uid://dl6fae5ts2kt3"]

[ext_resource type="Script" path="res://Scripts/AddTaskScript.gd" id="1_wuo0i"]

[sub_resource type="GDScript" id="GDScript_7vo35"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_wuo0i")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ToDoTasksTitle" type="Label" parent="."]
offset_left = -138.0
offset_top = -296.0
offset_right = 140.0
offset_bottom = -235.0
theme_override_font_sizes/font_size = 40
text = "Add Task/Goal"
horizontal_alignment = 1

[node name="Label" type="Label" parent="."]
offset_left = -152.0
offset_top = -106.0
offset_right = -61.0
offset_bottom = -83.0
text = "Task Name:"

[node name="TextEdit" type="TextEdit" parent="."]
offset_left = -153.0
offset_top = -82.0
offset_right = -5.0
offset_bottom = -52.0

[node name="Label2" type="Label" parent="."]
offset_left = -152.0
offset_top = -49.0
offset_right = -19.0
offset_bottom = -26.0
text = "Task Description:"

[node name="TextEdit2" type="TextEdit" parent="."]
offset_left = -153.0
offset_top = -24.0
offset_right = -5.0
offset_bottom = 6.0

[node name="Label3" type="Label" parent="."]
offset_left = -146.0
offset_top = -222.0
offset_right = -61.0
offset_bottom = -199.0
text = "Task Type:"

[node name="OptionButton" type="OptionButton" parent="."]
offset_left = -147.0
offset_top = -197.0
offset_right = -52.0
offset_bottom = -166.0
item_count = 2
popup/item_0/text = "Task"
popup/item_1/text = "Goal"
popup/item_1/id = 1

[node name="CheckBox" type="CheckBox" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.0
offset_top = 25.0
offset_right = -130.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label4" type="Label" parent="."]
offset_left = -130.0
offset_top = 24.0
offset_right = -38.0
offset_bottom = 47.0
text = "Repeatable:"

[node name="CheckBox2" type="CheckBox" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 9.0
offset_top = 25.0
offset_right = 33.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label5" type="Label" parent="."]
offset_left = 35.0
offset_top = 25.0
offset_right = 127.0
offset_bottom = 48.0
text = "Deadline:"

[node name="Label6" type="Label" parent="."]
offset_left = -153.0
offset_top = 79.0
offset_right = -105.0
offset_bottom = 102.0
text = "Every:"

[node name="Label7" type="Label" parent="."]
offset_left = -148.0
offset_top = 122.0
offset_right = -100.0
offset_bottom = 149.0
text = "Time:"

[node name="OptionButton2" type="OptionButton" parent="."]
offset_left = -88.0
offset_top = 86.0
offset_right = -32.0
offset_bottom = 106.0
item_count = 3
popup/item_0/text = "Day"
popup/item_1/text = "Week"
popup/item_1/id = 1
popup/item_2/text = "Month"
popup/item_2/id = 2

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = -91.0
offset_top = 121.0
offset_right = -23.9375
offset_bottom = 152.0
script = SubResource("GDScript_7vo35")

[node name="Button" type="Button" parent="."]
offset_left = -75.0
offset_top = 200.0
offset_right = 75.0
offset_bottom = 231.0
text = "Sign Contract
"

[node name="Label8" type="Label" parent="."]
offset_left = -149.0
offset_top = -165.0
offset_right = -64.0
offset_bottom = -142.0
text = "Goal Type:"

[node name="OptionButton3" type="OptionButton" parent="."]
offset_left = -150.0
offset_top = -141.0
offset_right = -55.0
offset_bottom = -110.0
item_count = 2
popup/item_0/text = "Short Term"
popup/item_1/text = "Long Term"
popup/item_1/id = 1

[node name="BackButton" type="Button" parent="."]
offset_left = -22.0
offset_top = 243.0
offset_right = 24.0
offset_bottom = 263.0
text = "Back
"
